force-app/main/default/objects/Pricing_Bid_Log__c/Pricing_Bid_Log__c.object-meta.xml
<CustomObject>
    <label>Pricing Bid Log</label>
    <nameField>
        <displayFormat>4{000000}</displayFormat>
        <label>Bid Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Bid Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>