force-app/main/default/objects/Pricing_Bid_Log__c/fields/Analysis_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Request_Date__c</fullName>
    <label>Analysis Request Date</label>
    <type>Date</type>
</CustomField>