force-app/main/default/objects/Pricing_Bid_Log__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deals Desk</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Executive Office</fullName>
                <isActive>false</isActive>
                <label>Executive Office</label>
            </value>
            <value>
                <fullName>LOB</fullName>
                <isActive>false</isActive>
                <label>LOB</label>
            </value>
            <value>
                <fullName>RVP</fullName>
                <isActive>false</isActive>
                <label>RVP</label>
            </value>
            <value>
                <fullName>RVP-1</fullName>
                <isActive>false</isActive>
                <label>RVP-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>