force-app/main/default/objects/Pricing_Bid_Log__c/fields/Bid_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Review_Date__c</fullName>
    <label>Bid Review Date</label>
    <type>Date</type>
</CustomField>