force-app/main/default/objects/Pricing_Bid_Log__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Customer__r.Account_Country_Code__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>