force-app/main/default/objects/Pricing_Bid_Log__c/fields/Create_Version__c.field-meta.xml
<CustomField>
    <fullName>Create_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using this field to fire the Flow to create a new record on selecting this checkbox.</description>
    <label>Create Version</label>
    <type>Checkbox</type>
</CustomField>