force-app/main/default/objects/Pricing_Bid_Log__c/fields/Customer_Auto_Populate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Auto_Populate__c</fullName>
    <label>Customer</label>
    <type>TextArea</type>
</CustomField>