force-app/main/default/objects/Pricing_Bid_Log__c/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <label>Direct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>