force-app/main/default/objects/Pricing_Bid_Log__c/fields/GM_Change_in_USd__c.field-meta.xml
<CustomField>
    <fullName>GM_Change_in_USd__c</fullName>
    <label>GM Change in USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>