force-app/main/default/objects/Pricing_Bid_Log__c/fields/Is_there_any_Erosion__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_Erosion__c</fullName>
    <label>Is there any Erosion?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Negotiation_Price_Strategy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Erosion</fullName>
            </value>
            <value>
                <fullName>Price Erosion</fullName>
            </value>
            <value>
                <fullName>Scope Erosion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>