force-app/main/default/objects/Pricing_Bid_Log__c/fields/Key_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Key_Criteria__c</fullName>
    <label>Key Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Bid_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Solution</fullName>
            </value>
            <value>
                <fullName>Business Benefits</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Pre-Contact Termination</fullName>
            </value>
            <value>
                <fullName>Post-Contact Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>