force-app/main/default/objects/Pricing_Bid_Log__c/fields/More_Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>More_Detailed_Description__c</fullName>
    <label>More Detailed Description</label>
    <length>100768</length>
    <type>LongTextArea</type>
</CustomField>