force-app/main/default/objects/Pricing_Bid_Log__c/fields/Negotiation_Price_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Price_Strategy__c</fullName>
    <label>Negotiation/Price Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excess/Obsolete Inventory</fullName>
            </value>
            <value>
                <fullName>Online/Reverse Auction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Unsolicited</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Renewal - End of Service Contract</fullName>
            </value>
            <value>
                <fullName>Renewal – RFP</fullName>
            </value>
            <value>
                <fullName>Renewal – Unsolicited</fullName>
            </value>
            <value>
                <fullName>Renewal – Procurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>