force-app/main/default/objects/Pricing_Bid_Log__c/fields/Opportunity_4__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity 4</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs (Opportunity 4)</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs3</relationshipName>
    <type>Lookup</type>
</CustomField>