force-app/main/default/objects/Pricing_Bid_Log__c/fields/Opportunity_5__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity 5</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs (Opportunity 5)</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs4</relationshipName>
    <type>Lookup</type>
</CustomField>