force-app/main/default/objects/Pricing_Bid_Log__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search Opportunities by either Number of Name</inlineHelpText>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>