force-app/main/default/objects/Pricing_Bid_Log__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Competitor</label>
    <referenceTo>Competitors__c</referenceTo>
    <relationshipLabel>Pricing Bid Logs</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>