force-app/main/default/objects/Pricing_Bid_Log__c/fields/Total_Controllable_GM__c.field-meta.xml
<CustomField>
    <fullName>Total_Controllable_GM__c</fullName>
    <label>Total Controllable GM (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>