force-app/main/default/objects/Pricing_Bid_Log__c/validationRules/Make_Opportunity_2_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Opportunity_2_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( Multiple_Opportunities__c = True, 
ISBLANK( Opportunity_2__c ) ) , True, False)</errorConditionFormula>
    <errorDisplayField>Opportunity_2__c</errorDisplayField>
    <errorMessage>Please fill in Value for Opportunity 2.</errorMessage>
</ValidationRule>