force-app/main/default/objects/Pricing_Bid_Log__c/listViews/My_Bid_Logs.listView-meta.xml
<ListView>
    <fullName>My_Bid_Logs</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bid_Version__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Analysis_Request_Date__c</columns>
    <columns>Opportunity_Number_of_Opportunity__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Industry__c</columns>
    <columns>Country__c</columns>
    <columns>Bid_Status__c</columns>
    <columns>Total_Controllable_GM__c</columns>
    <columns>Total_Deal_Revenue__c</columns>
    <columns>Analyst__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Bid Logs</label>
</ListView>